--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "clang"]
 	path = clang
-	url = https://github.com/kennytm/clang-cindex-python3.git
+	url = https://github.com/mohanavelu/clang-cindex-python3
